<?xml version="1.0"?>
<package>
  <name>ros-peripherals</name>
  <version>0.0.1</version>
  <description>ROS package usb-based ros peripherals</description>

  <maintainer email="jarney@gmail.com">Jonathan Arney</maintainer>
  <author email="jarney@gmail.com">Jonathan Arney</author>

  <license>BSD</license>

  <url type="website">http://github.com/jarney/ros-peripherals</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2_ros</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2_ros</run_depend>

  <export>
  </export>
</package>
